Fix overflow padding issue

--- a/src/handbook/src/css/pages/HomePage.scss
+++ b/src/handbook/src/css/pages/HomePage.scss
@@ -1,7 +1,8 @@
 .HomePage {
     height: 100%;
     width: 100%;
-    overflow: scroll;
+    overflow-y: scroll;
+    padding: 0;
 
     display:flex;
     flex-direction: column;
